Update to bug where product subscriptions were not showing up in the modal

--- a/public/snipcart-overrides.css
+++ b/public/snipcart-overrides.css
@@ -152,6 +152,6 @@ span.snipcart__font--secondary.snipcart__font--regular,
     }
 }
 
-.border.border-gray-300.p-6.rounded-lg.bg-white.shadow:nth-child(1) {
+/* .border.border-gray-300.p-6.rounded-lg.bg-white.shadow:nth-child(1) {
     display: none;
-}
+} */
